--- a/package.json
+++ b/package.json
@@ -11,39 +11,29 @@
     "last": "ts-node --files src/cli/run.ts last",
     "day": "ts-node src/cli/run.ts",
     "next": "ts-node src/cli/next.ts",
-    "eslint": "eslint --fix --cache .",
-    "eslint:check": "eslint --cache .",
-    "format": "prettier --cache --write . --log-level=warn",
-    "format:check": "prettier --cache -c .",
-    "check": "npm run build && npm run eslint:check && npm run format:check",
-    "lint": "npm run build && npm run eslint && npm run format",
+    "eslint": "eslint --fix --cache src",
+    "eslint:check": "eslint --cache src",
+    "check": "npm run build && npm run eslint:check",
+    "lint": "npm run build && npm run eslint",
     "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@jest/globals": "^29.3.1",
     "@types/copy-paste": "^1.1.33",
     "@types/figlet": "^1.5.5",
     "@types/jest": "^29.2.3",
     "@types/node": "^22.10.1",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@typescript-eslint/typescript-estree": "^6.7.5",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^15.1.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   },
   "dependencies": {
     "chalk": "^5.1.2",
@@ -51,7 +41,6 @@
     "figlet": "^1.5.2"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --fix",
-    "*": "prettier --write --ignore-unknown"
+    "*.ts": "eslint --cache --fix"
   }
 }
