better specific day generation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:watch": "ENABLE_SLOW_TESTS=1 jest --watch --onlyChanged",
     "last": "ts-node --files src/cli/run.ts last",
     "day": "ts-node src/cli/run.ts",
-    "next": "ts-node src/cli/next.ts",
+    "next": "ts-node src/cli/generate.ts next",
+    "today": "ts-node src/cli/generate.ts today",
+    "generate": "ts-node src/cli/generate.ts",
     "eslint": "eslint --fix --cache src",
     "eslint:check": "eslint --cache src",
     "check": "npm run build && npm run eslint:check",
